--- a/public/clock2/index.html
+++ b/public/clock2/index.html
@@ -19,10 +19,10 @@
   <div id="clock">
     <p class="date">{{ date }}</p>
     <p class="time">{{ time }}</p>
+    <p class="timecost">{{ speed }}</p>
+    <p class="updated_at">{{ lastUpdateAt }}</p>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
-
-  
 
     <script  src="js/index.js"></script>
 
